Fix description wrapping

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -225,9 +225,9 @@ input, textarea, select, .uneditable-input {
     }
     td {
       padding-left: 50px;
-      word-break: break-all;
+      word-wrap: break-word;
       padding-bottom: 20px;
-      white-space: pre;
+      white-space: pre-wrap;
     }
     &:last-child {
       border-bottom: 2px solid $grayLight;
